--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.5.0",
+    "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.6",
@@ -19,7 +21,8 @@
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.9",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
