--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.9",
     "vue-router": "^4.5.1",
+    "vue3-slide-verify": "^1.1.7",
     "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
